--- a/4pics1word/templates/challenge-board.html
+++ b/4pics1word/templates/challenge-board.html
@@ -108,7 +108,7 @@
 
     <!-- Challenge Board -->
     <div class="container mt-4 col-md-10 challenge-board">
-        <div class="container mt-4">
+        <div class="container mt-4" id = 'games-container'>
             {% for game in games %}
                     <div class="col-md-12 mb-4 card">
                         <div class="card-body">
