--- a/4pics1word/templates/html_components/auth_modal.html
+++ b/4pics1word/templates/html_components/auth_modal.html
@@ -14,12 +14,12 @@
                     {{ loginform.hidden_tag() }}
                     <h1>Login</h1>
                     <div class="username-container input-box">
-                        {{ loginform.username(class="form-control", placeholder="Username") }}
+                        {{ loginform.username(class="form-control", placeholder="Username", id="username-login") }}
                         <i class="bi bi-person-fill"></i>
                         <div id = 'login-username-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="password-container input-box">
-                        {{ loginform.password(class="form-control", placeholder="Password") }}
+                        {{ loginform.password(class="form-control", placeholder="Password", id="password-login") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'login-password-error' class = 'invalid-feedback'>Required field</div>
                     </div>
@@ -53,17 +53,17 @@
                     {{ registerform.hidden_tag() }}
                     <h1>Register</h1>
                     <div class="input-box">
-                        {{ registerform.username(class="form-control", placeholder="Username") }}
+                        {{ registerform.username(class="form-control", placeholder="Username", id="username-register") }}
                         <i class="bi bi-person-fill"></i>
                         <div id = 'register-username-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="input-box">                        
-                        {{ registerform.password(class="form-control", placeholder="Password") }}
+                        {{ registerform.password(class="form-control", placeholder="Password", id="password-register") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'register-password-error' class = 'invalid-feedback'>Required field</div>
                     </div>
                     <div class="input-box">                        
-                        {{ registerform.confirm_password(class="form-control", placeholder="Confirm Password") }}
+                        {{ registerform.confirm_password(class="form-control", placeholder="Confirm Password", id="password-confirm-register") }}
                         <i class="bi bi-key-fill"></i>
                         <div id = 'register-password-confirm-error' class = 'invalid-feedback'>Required field</div>
                     </div>
