--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -1,6 +1,7 @@
 body {
     background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
     min-height: 100vh;
+    height: 100%;
 }
 
 /* Set up for particles.js */
@@ -47,7 +48,6 @@ body {
     border-color: rgb(169, 143, 255);
     box-shadow: 0 0 5px rgb(169, 143, 255);
 }
-
 
 .spacer {
     width: 30px;
@@ -109,7 +109,7 @@ input[type="file"] {
 }
 
 .image-cell {
-    aspect-ratio: 1; /* Ensure the aspect ratio of each cell is 1:1 */
+    aspect-ratio: 1;
     min-width: 180px;
     max-width: 240px;
     padding: 8px;
@@ -167,7 +167,7 @@ label {
 }
 
 .play-button {
-    background-color: transparent;
+    background-color: transparent !important;
     background-image: radial-gradient(circle farthest-corner at 14.2% 27.5%, rgba(104,199,255,1) 0%, rgba(181,126,255,1) 90%);
     background-size: 0% 100%;
     background-position: left center;
@@ -181,11 +181,45 @@ label {
     border: 2px solid rgb(169, 143, 255);
     overflow: hidden;
     padding: 0 !important;
+    z-index: 2;
 }
 
 .play-button:hover {
     background-color: transparent;
     background-size: 100% 100%;
-    color: #FFF;
+    color: #FFF !important;
     border: 2px solid rgb(169, 143, 255);
+}
+
+.btn-primary:focus {
+    color: rgb(169, 143, 255);
+    background-color: transparent;
+    border-color: rgb(169, 143, 255);
+    box-shadow: none;
+}
+
+.btn:focus {
+    outline: 0;
+    box-shadow: none;
+}
+
+#hintText {
+    position: fixed;
+    top:20%;
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    text-align: center;
+    transition: opacity 0.5s ease;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow:rgba(0, 0, 0, 0.4);
+    border: 1px solid rgb(169, 143, 255);
+}
+
+#hintText.showHint {
+    opacity: 1;
+    max-height: 100px;
+    z-index: 3;
+    padding:10px;
 }
