--- a/4pics1word/templates/html_components/auth_modal.html
+++ b/4pics1word/templates/html_components/auth_modal.html
@@ -11,7 +11,7 @@
             </button>
             <div class="wrapper">
                 <form id = 'login-form' method = 'POST' action = "{{ url_for('login') }}" novalidate class = 'needs-validation'>
-                    {{ loginform.hidden_tag() }}
+                    {{ loginform.csrf_token(id = "{{ loginform.csrf_token }}") }}
                     <h1>Login</h1>
                     <div class="username-container input-box">
                         {{ loginform.username(class="form-control", placeholder="Username", id="username-login") }}
@@ -50,7 +50,7 @@
             </button>
             <div class="wrapper">
                 <form id = 'register-form' method = 'POST' action = "{{ url_for('register') }}" novalidate class = 'needs-validation'>
-                    {{ registerform.hidden_tag() }}
+                    {{ registerform.csrf_token(id = "{{ register_token }}") }}
                     <h1>Register</h1>
                     <div class="input-box">
                         {{ registerform.username(class="form-control", placeholder="Username", id="username-register") }}
