--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -56,6 +56,17 @@ body {
     text-align: center;
 }
 
+.image-cell img.zoom {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    max-height: 80vh; 
+    max-width: 80vw; 
+    object-fit: contain; 
+    z-index: 1000;
+  }
+
 .incorrect-input {
     text-align: center;
     border: 3px solid red;
