--- a/4pics1word/templates/challenge.html
+++ b/4pics1word/templates/challenge.html
@@ -22,11 +22,12 @@
   <script defer src="{{url_for('static', filename = 'js/search.js')}}"></script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script defer src="{{ url_for('static', filename='js/particles.js') }}"></script>
+  <script defer src="{{ url_for('static', filename='js/image-interaction.js') }}"></script>
 
 </head>
 
 <body>
-
+  <div id="overlay" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.5); z-index:999;"></div>
   {% include "/html_components/navbar.html" %}
 
   {% include "/html_components/auth_modal.html" %}
