--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -56,7 +56,7 @@ body {
     text-align: center;
 }
 
-.image-cell img.zoom {
+.zoom {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -65,7 +65,14 @@ body {
     max-width: 80vw; 
     object-fit: contain; 
     z-index: 1000;
-  }
+    border-radius: 20px!important;
+    height: auto;
+    width: auto;
+}
+
+.image-cell img{
+    border-radius: 20px!important;
+}
 
 .incorrect-input {
     text-align: center;
