--- a/4pics1word/templates/index.html
+++ b/4pics1word/templates/index.html
@@ -15,7 +15,7 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer">
     <script defer src="{{url_for('static', filename = 'js/login-validation.js')}}"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -112,7 +112,7 @@
                     <h2 class="lead fs-5">Visit the challenges page in the navigation bar to find trending posts as well as all the challenges users have posted!</h2>
                 </div>
                 <div class="col-md-6 challenge-board-video" data-aos="fade-up" data-aos-offset="100" data-aos-duration="1500">
-                    <video width = 100% height =100% autoplay muted loop>
+                    <video autoplay muted loop>
                         <source src="{{url_for('static', filename = 'assets/challenge-board-tutorial-current.mp4')}}" type="video/mp4">
                         Your browser does not support video.
                     </video>
