--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -58,28 +58,16 @@ body {
 
 .incorrect-input {
     text-align: center;
-    border: 3px solid red;
-    width: 65px;
-    height: 75px;
-    padding: 10px;
-    margin: 5px;
+    border: 2px solid red;
     outline: none;
     background-color: transparent;
-    font-size: 30px;
-    color: white;
 }
 
 .correct-input {
     text-align: center;
-    border: 4px solid lawngreen;
-    width: 65px;
-    height: 75px;
-    padding: 10px;
-    margin: 5px;
+    border: 2px solid rgb(0, 208, 42);
     outline: none;
     background-color: transparent;
-    font-size: 30px;
-    color: white;
 }
 
 label svg {
