--- a/4pics1word/static/css/game_attempt.css
+++ b/4pics1word/static/css/game_attempt.css
@@ -58,7 +58,7 @@ body {
 
 .zoom {
     position: fixed;
-    top: 50%;
+    top: calc(50% + var(--navbar-height) / 2);
     left: 50%;
     transform: translate(-50%, -50%); 
     max-height: 80vh; 
